# Interprex

./: .gitignore  CLAUDE.md  Desc_InstantCraftBench.uasset  HANDOFF_mods_translation.md  README.md  _set_version000.py  build-full.bat  build-sidecar.bat  build_test.ps1  check_env.ps1  check_update.ps1  debug_ids.py  debug_mayo.py  debug_mayo2.py  debug_mayo3.py  debug_mayo4.py  debug_mayo5.py  debug_pickle.py  debug_rpyc_parse.py  debug_rpyc_parse2.py  debug_rpyc_parse3.py  debug_utoc_parse.py  dry_run_3t.txt  dry_run_gemini.txt  dry_run_gemma.txt  dry_run_gemma2.txt  dry_run_gemma4.txt  dry_run_output.txt  dry_run_real.txt  dry_run_real2.txt  gemini_skip_unique.txt  hard_skip_only.txt  index.html  keystring-safe-translate.md  out_extracted.json  package-lock.json  package.json  pronoun_backend.txt  push.bat  scratch_list_all_utoc.py  (+11 more)
.github/workflows/: release.yml
.mimocode/plans/: 1781802883102-happy-otter.md
.opt_work/: baseline_ids.json  baseline_stream.ndjson  mods.json  opt2_stream.ndjson  opt3_stream.ndjson  opt_stream.ndjson  partA_stream.ndjson
python-core/: _oo_id.py  _test_extract.py  count_all.py  debug_usmap.py  debug_usmap2.py  debug_usmap3.py  debug_usmap4.py  debug_usmap5.py  debug_usmap6.py  extract_rpy.py  extract_rpy_detailed.py  find_body_offset.py  gen_so_fixed.py  inspect_renpy_lines.py  main.py  oodle.py  regen_patches.py  renpy_python_translator.py  requirements.txt  rpy_analysis_part1.txt  scheduler.py  scratch_test_rimworld_real.py  selftest.py  sidecar.spec  subsys.json  test_fp_regex.py  test_id.py  test_rampdown.py  test_so_output.json  test_stress.py  test_token_validation.py
python-core/_bp/: edits.json  oc.json  oc_h.json
python-core/_bp/in/: global.utoc
python-core/_chk/in/: MkPlusFactoryGame-Windows.ucas  MkPlusFactoryGame-Windows.utoc  global.ucas
python-core/dll-editor/: Program.cs
python-core/jmap_dumper/: Cargo.toml
python-core/jmap_dumper/src/: main.rs
python-core/parsers/: __init__.py  base.py  csharp.py  fusion.py  i18n.py  mmf2.py  pak.py  qsp.py  renpy.py  renpy_risk.py  rpa.py  rpgmaker.py  sdf7d2d.py  twine.py  unity.py  unreal.py  unreal4_5.py
python-core/providers/: __init__.py  base.py  gemini.py  openai_compat.py
python-core/scratch_temp/: check_init_block.py  globalgamemanagers.assets  level0
python-core/uasset-extractor/: Program.cs  UAssetExtractor.csproj
python-core/utils/: binary_diff.py
python-core/validators/: __init__.py  base.py  i18n.py  renpy.py
src/: App.css  App.tsx  FolderPicker.tsx  UpdateOverlay.tsx
src-tauri/: Cargo.toml  build.rs  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/i18n/: en.ts  index.ts  ru.ts
src/lib/: ipc.ts  llm.ts  project.ts  settings.ts  types.ts
tmp_input/: InstantCraftBenchFactoryGame-Windows.ucas  InstantCraftBenchFactoryGame-Windows.utoc
(+15 files in other folders)
