[package]
name = "interprex"
version = "0.0.65"
description = "Interprex"
authors = ["you"]
edition = "2021"

[lib]
name = "interprex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Windows Job Object: bind the Python sidecar's process tree to the app so the OS
# kills it whenever Tauri exits — by close, crash, or Task Manager. Removes the
# orphaned-sidecar / port-8723-in-use class of bugs at the kernel level.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

# Release profile tuned for BUILD SPEED, not micro-runtime-speed. Interprex is a
# thin Tauri shell (it just launches the Python sidecar + window), so the runtime
# cost of less aggressive optimization is imperceptible, while CI/local compile
# time drops a lot:
#   lto = false        -> skips whole-program link-time optimization (the single
#                         slowest release step).
#   codegen-units = 16 -> lets the compiler parallelize codegen instead of the
#                         default release codegen-units = 1.
#   opt-level = 2      -> nearly all the speed of 3, compiles faster.
# Trade-off: the exe is ~5-15% larger and a hair slower at pure CPU work — neither
# matters for a window+sidecar launcher. Revert by deleting this block.
[profile.release]
lto = false
codegen-units = 16
opt-level = 2
